feat: claim에 nickname, pk도 추가